--- a/markup/_layouts/_content/_homepage/field.jade
+++ b/markup/_layouts/_content/_homepage/field.jade
@@ -1,177 +1,158 @@
-section.nl-section.nl-create-team.homepage-field
-	div.container-fluid
-		div.row
-			div.col-md-8.offset-md-2.col-lg-12.col-xl-12.offset-lg-0.offset-xl-0
-				h5 MY TEAMS
-			div.col-md-12.col-lg-12.col-xl-12
-				form.form-signin.dropdown-my-teams
-					.input-group
-						select#country.form-control.custom-select(placeholder='COUNTRY', required='')
-							option(selected='' disabled='' hidden='') Main best NFL Team!
-							option Other amazing team name1!
-							option Other amazing team name2!
-							option Other amazing team name3!
-							option Other amazing team name4! 
+div.nl-section.nl-create-team.homepage-field
+	div.row
+		div.col-12
+			h5 MY TEAMS
+		div.col-12.col-md-12.col-lg-12.col-xl-12
+			form.form-signin.dropdown-my-teams
+				.input-group
+					select#country.form-control.custom-select(placeholder='COUNTRY', required='')
+						option(selected='' disabled='' hidden='') Main best NFL Team!
+						option Other amazing team name1!
+						option Other amazing team name2!
+						option Other amazing team name3!
+						option Other amazing team name4! 
+		div.col-12			
+			div.nl-team-button
+				button.btn.btn-team.btn-big-radius.active(type="button").field-view-btn field view
+				button.btn.btn-team.btn-big-radius(type="button").list-view-btn list view
+			div.nl-team-field.football
+				div.player-main-block.football
+					div.nl-player-block.nl-FLEX-position(data-position="FLEX")
+						img(src="assets/img/football/FLEX.png" alt="FLEX")
+						div.nl-player-block--data
+							p gronkowski
+							p.data <span>12.67</span> <span>$42000</span>
+					div.nl-player-block.nl-K-position(data-position="K")
+						img(src="assets/img/football/K.png" alt="K")
+						div.nl-player-block--data
+							p gronkowski
+							p.data <span>12.67</span> <span>$42000</span>
+					div.nl-player-block.nl-LRB-position(data-position="LRB")
+						img(src="assets/img/football/LRB.png" alt="LRB")
+						div.nl-player-block--data
+							p gronkowski
+							p.data <span>12.67</span> <span>$42000</span>
+					div.nl-player-block.nl-RRB-position(data-position="RRB")
+						img(src="assets/img/football/RRB.png" alt="RRB")
+						div.nl-player-block--data
+							p gronkowski
+							p.data <span>12.67</span> <span>$42000</span>
+					div.nl-player-block.nl-QB-position(data-position="QB")
+						img(src="assets/img/football/QB.png" alt="QB")
+						div.nl-player-block--data
+							p gronkowski
+							p.data <span>12.67</span> <span>$42000</span>
+					div.nl-player-block.nl-LWR-position(data-position="LWR")
+						img(src="assets/img/football/LWR.png" alt="LWR")
+						div.nl-player-block--data
+							p gronkowski
+							p.data <span>12.67</span> <span>$42000</span>
+					div.nl-player-block.nl-RWR-position(data-position="RWR")
+						img(src="assets/img/football/RWR.png" alt="RWR")
+						div.nl-player-block--data
+							p gronkowski
+							p.data <span>12.67</span> <span>$42000</span>
+					div.nl-player-block.nl-TE-position(data-position="TE")
+						img(src="assets/img/football/TE.png" alt="TE")
+						div.nl-player-block--data
+							p gronkowski
+							p.data <span>12.67</span> <span>$42000</span>
+					div.nl-player-block.nl-team-logo-position
+						img(src="assets/img/football/team-logo.png" alt="logo")
 
-				div.nl-team-button
-					button.btn.btn-team.btn-big-radius.active(type="button").field-view-btn field view
-					button.btn.btn-team.btn-big-radius(type="button").list-view-btn list view
-				div.nl-team-field.football
-					div.player-main-block.football
-						div.nl-player-block.nl-FLEX-position(data-position="FLEX")
-							img(src="assets/img/football/FLEX.png" alt="FLEX")
-							div.nl-player-block--data
-								p gronkowski
-								p.data <span>12.67</span> <span>$42000</span>
-						div.nl-player-block.nl-K-position(data-position="K")
-							img(src="assets/img/football/K.png" alt="K")
-							div.nl-player-block--data
-								p gronkowski
-								p.data <span>12.67</span> <span>$42000</span>
-						div.nl-player-block.nl-LRB-position(data-position="LRB")
-							img(src="assets/img/football/LRB.png" alt="LRB")
-							div.nl-player-block--data
-								p gronkowski
-								p.data <span>12.67</span> <span>$42000</span>
-						div.nl-player-block.nl-RRB-position(data-position="RRB")
-							img(src="assets/img/football/RRB.png" alt="RRB")
-							div.nl-player-block--data
-								p gronkowski
-								p.data <span>12.67</span> <span>$42000</span>
-						div.nl-player-block.nl-QB-position(data-position="QB")
-							img(src="assets/img/football/QB.png" alt="QB")
-							div.nl-player-block--data
-								p gronkowski
-								p.data <span>12.67</span> <span>$42000</span>
-						div.nl-player-block.nl-LWR-position(data-position="LWR")
-							img(src="assets/img/football/LWR.png" alt="LWR")
-							div.nl-player-block--data
-								p gronkowski
-								p.data <span>12.67</span> <span>$42000</span>
-						div.nl-player-block.nl-RWR-position(data-position="RWR")
-							img(src="assets/img/football/RWR.png" alt="RWR")
-							div.nl-player-block--data
-								p gronkowski
-								p.data <span>12.67</span> <span>$42000</span>
-						div.nl-player-block.nl-TE-position(data-position="TE")
-							img(src="assets/img/football/TE.png" alt="TE")
-							div.nl-player-block--data
-								p gronkowski
-								p.data <span>12.67</span> <span>$42000</span>
-						div.nl-player-block.nl-team-logo-position
-							img(src="assets/img/football/team-logo.png" alt="logo")
 
+			
 
-				
+			div.nl-team-list.nl-my-teams.hide
+				.nl-card-wrapper
+					.row
+						.col-12.no-padding
+							div.nl-team-card.table-data-field
+								h3 team NLC2
+								<img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
 
-				div.nl-team-list.nl-my-teams.hide
-					.nl-card-wrapper
-						.row
-							.col-12
-								div.nl-team-card.table-data-field
-									h3 team NLC2
-									<img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
+					.row
+						.col-12.no-padding
+							table.table.table-striped.nl-team-list-table
+								thead
+									tr
 
-						.row
-							.col-12
-								table.table.table-striped.nl-team-list-table
-									thead
-										tr
+										th.name-list-view NAME
+										th POS
+										th FP
+										th SALARY
+										th
 
-											th NAME
-											th POS
-											th FP
-											th SALARY
-											th
+								tbody
+									tr
 
-									tbody
-										tr
+										td Player name
+										td.pos FLEX
+										td 30
+										td $0
+									tr
 
-											td Player name
-											td.pos FLEX
-											td 30
-											td $0
-											td
-												button.btn.btn-primary.btn-sm.btn-warning cut
-										tr
+										td Player name
+										td.pos K
+										td 30
+										td $0
+									tr
 
-											td Player name
-											td.pos K
-											td 30
-											td $0
-											td
-												button.btn.btn-primary.btn-sm.btn-warning cut
-										tr
+										td Player name
+										td.pos RB
+										td 30
+										td $0
+									tr
 
-											td Player name
-											td.pos RB
-											td 30
-											td $0
-											td
-												button.btn.btn-primary.btn-sm.btn-warning cut
-										tr
+										td Player name
+										td.pos RB
+										td 30
+										td $0
+									tr
 
-											td Player name
-											td.pos RB
-											td 30
-											td $0
-											td
-												button.btn.btn-primary.btn-sm.btn-warning cut
-										tr
+										td Player name
+										td.pos QB
+										td 30
+										td $0
+									tr
 
-											td Player name
-											td.pos QB
-											td 30
-											td $0
-											td
-												button.btn.btn-primary.btn-sm.btn-warning cut
-										tr
+										td Player name
+										td.pos WR
+										td 30
+										td $0
+									tr
 
-											td Player name
-											td.pos WR
-											td 30
-											td $0
-											td
-												button.btn.btn-primary.btn-sm.btn-warning cut
-										tr
+										td Player name
+										td.pos WR
+										td 30
+										td $0
+									tr
 
-											td Player name
-											td.pos WR
-											td 30
-											td $0
-											td
-												button.btn.btn-primary.btn-sm.btn-warning cut
-										tr
+										td Player name
+										td.pos TE
+										td 30
+										td $0
+									tr
 
-											td Player name
-											td.pos TE
-											td 30
-											td $0
-											td
-												button.btn.btn-primary.btn-sm.btn-warning cut
-										tr
-
-											td Player name
-											td.pos DEF
-											td 30
-											td $0
-											td
-												button.btn.btn-primary.btn-sm.btn-warning cut
-				div.nl-team-info
-					div.nl-team-data
-						div.row 
-							div.col-lg-4
-								button.btn.btn-primary EDIT
-							div.col-lg-8
-								div.row
-									div.col-8 SALARY CAP:
-									div.col-4
-										span $65000
-						
-									div.col-8 TOTAL SALARY:
-									div.col-4
-										span $46730
-						
-									div.col-8 Available:
-									div.col-4
-										span.avalibe $25000
+										td Player name
+										td.pos DEF
+										td 30
+										td $0
+			div.nl-team-info
+				div.nl-team-data
+					div.row 
+						div.col-4.col-lg-4
+							button.btn.btn-primary EDIT
+						div.col-8.col-lg-8
+							div.row
+								div.col-8 SALARY CAP:
+								div.col-4
+									span $65000
+					
+								div.col-8 TOTAL SALARY:
+								div.col-4
+									span $46730
+					
+								div.col-8 Available:
+								div.col-4
+									span.avalibe $25000
