included fonts folder and small feedback updates to live score page

--- a/markup/_layouts/_content/live_score_content.jade
+++ b/markup/_layouts/_content/live_score_content.jade
@@ -10,7 +10,7 @@ mixin repeat(times)
 						span cl
 						span 7
 					li
-						span <img src="http://localhost:3000/assets/img/emblem/MU.png" alt="MU">
+						span <img src="http://localhost:3000/assets/img/emblem/FCB.png" alt="MU">
 						span cin
 						span 448
 					li
@@ -48,12 +48,11 @@ mixin list-of-teams(times)
 				div.rank
 					div.rank__no.aligner
 						div.rank__center
-							span Rank
 							span 124
 					div.rank__title
 						p Best team evah
 					div.rank__thumb
-						img(src="http://via.placeholder.com/32x32", alt="")
+						img(src="assets/img/helmet-2", alt="")
 				table.table.table-info3
 					thead
 						tr
@@ -71,28 +70,28 @@ mixin list-of-teams(times)
 								td Name
 								td Pos
 								td 123
-								td $1000
+								td 15
 							tr
 								td.indicated
 									span.played.indicator
 								td Name
 								td Pos
 								td 123
-								td $1000
+								td 15
 							tr
 								td.indicated
 									span.played.indicator
 								td Name
 								td Pos
 								td 123
-								td $1000
+								td 15
 							tr
 								td.indicated
 									span.played.indicator
 								td Name
 								td Pos
 								td 123
-								td $1000
+								td 15
 				div.nl-info-table-button
 					div.rank
 						div.rank__stats
@@ -147,7 +146,7 @@ section.nl-section.nl-players.nl-live-score
 				div.nl-contest-info-table
 					div.table-heading
 						div.dropdown
-							button#dropdownMenuButton.btn.btn-secondary.dropdown-toggle(type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Contest touchdowns all day!
+							button#dropdownMenuButton.btn.btn-secondary.dropdown-toggle(type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Select your contests
 							div.dropdown-menu(aria-labelledby="dropdownMenuButton")
 								a.dropdown-item Team A
 								a.dropdown-item Team B
@@ -189,7 +188,7 @@ section.nl-section.nl-players.nl-live-score
 								+contest-info(11)
 
 			div.col-sm-12.col-lg-6.col-xl-4
-				h5.d-inline-block.component-header Stats
+				h5.d-inline-block.component-header MY TEAM
 				div.team-field-section
 					div.rank
 						div.rank__no.aligner
@@ -199,7 +198,7 @@ section.nl-section.nl-players.nl-live-score
 						div.rank__select
 							div.rank__content
 								div.dropdown
-									button#dropdownMenuButton.btn.btn-secondary.dropdown-toggle(type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Contest touchdowns all day!
+									button#dropdownMenuButton.btn.btn-secondary.dropdown-toggle(type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Select my teams
 									div.dropdown-menu(aria-labelledby="dropdownMenuButton")
 										a.dropdown-item Team A
 										a.dropdown-item Team B
@@ -251,49 +250,49 @@ section.nl-section.nl-players.nl-live-score
 						div.nl-player-block.nl-FLEX-position(data-position="FLEX")
 							img(src="assets/img/football/FLEX.png" alt="FLEX")
 							div.nl-player-block--data
-								button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
+								
 								p gronkowski
 								p.data <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-K-position(data-position="K")
 							img(src="assets/img/football/K.png" alt="K")
 							div.nl-player-block--data
-								button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
+								
 								p gronkowski
 								p.data <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-LRB-position(data-position="LRB")
 							img(src="assets/img/football/LRB.png" alt="LRB")
 							div.nl-player-block--data
-								button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
+								
 								p gronkowski
 								p.data <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-RRB-position(data-position="RRB")
 							img(src="assets/img/football/RRB.png" alt="RRB")
 							div.nl-player-block--data
-								button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
+								
 								p gronkowski
 								p.data <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-QB-position(data-position="QB")
 							img(src="assets/img/football/QB.png" alt="QB")
 							div.nl-player-block--data
-								button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
+								
 								p gronkowski
 								p.data <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-LWR-position(data-position="LWR")
 							img(src="assets/img/football/LWR.png" alt="LWR")
 							div.nl-player-block--data
-								button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
+								
 								p gronkowski
 								p.data <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-RWR-position(data-position="RWR")
 							img(src="assets/img/football/RWR.png" alt="RWR")
 							div.nl-player-block--data
-								button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
+								
 								p gronkowski
 								p.data <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-TE-position(data-position="TE")
 							img(src="assets/img/football/TE.png" alt="TE")
 							div.nl-player-block--data
-								button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
+								
 								p gronkowski
 								p.data <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-team-logo-position
