--- a/markup/_layouts/_partials/header-log.jade
+++ b/markup/_layouts/_partials/header-log.jade
@@ -71,7 +71,7 @@ header.nl-header-log
                                 li.nav-item
                                     a.nav-link(href="players.html") PLAYERS
                                 li.nav-item
-                                    a.nav-link(href="#") LIVE SCORES
+                                    a.nav-link(href="live_score.html") LIVE SCORES
                                 li.nav-item.dropdown
                                     a.nav-link.dropdown-toggle(href="#" id="dropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") MY ACCOUNT
                                     div.dropdown-menu(aria-labelledby="dropdownMenuLink2")
